# automatic-fishstick

./: .gitignore  Dockerfile  docker-compose.yml  es-sink.json  mysql-source.json  pyproject.toml  register-connector.sh
consumer/: ingestion.py
dags/: kafka_stream.py
data_generator /: user.py
datastream/: job.py
init/: mysql-init.sql
producer/: click.py
